--- a/tests/zfs-tests/include/default.cfg.in
+++ b/tests/zfs-tests/include/default.cfg.in
@@ -76,11 +76,11 @@ export FIO_SCRIPTS=$STF_SUITE/tests/perf/fio
 export PERF_SCRIPTS=$STF_SUITE/tests/perf/scripts
 
 # some test pool names
-export TESTPOOL=testpool
-export TESTPOOL1=testpool1
-export TESTPOOL2=testpool2
-export TESTPOOL3=testpool3
-export PERFPOOL=perfpool
+export TESTPOOL=testpool-$(uuidgen | cut -c -13)
+export TESTPOOL1=testpool1-$(uuidgen | cut -c -13)
+export TESTPOOL2=testpool2-$(uuidgen | cut -c -13)
+export TESTPOOL3=testpool3-$(uuidgen | cut -c -13)
+export PERFPOOL=perfpool-$(uuidgen | cut -c -13)
 
 # some test file system names
 export TESTFS=testfs
