--- a/cmd/zfs_object_agent/client/Cargo.toml
+++ b/cmd/zfs_object_agent/client/Cargo.toml
@@ -11,6 +11,7 @@ async-recursion = "0.3.2"
 chrono = "0.4.19"
 clap = "2"
 futures = "0.3.13"
+git-version = "0.3.5"
 lazy_static = "1.4.0"
 nvpair = { git = "https://github.com/ahrens/rust-libzfs", branch = "work"}
 rand = "0.8.3"
