--- a/cmd/zfs_object_agent/server/Cargo.toml
+++ b/cmd/zfs_object_agent/server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 chrono = "0.4"
 clap = "2"
+git-version = "0.3.5"
 log = "0.4"
 util = { path = "../util" }
 zettacache = { path = "../zettacache" }
