--- a/cmd/zfs_object_agent/zcdb/Cargo.toml
+++ b/cmd/zfs_object_agent/zcdb/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 clap = "2"
+git-version = "0.3.5"
 libc = "0.2"
 log = "0.4"
 tokio = { version = "1.4", features = ["full"] }
