--- a/cmd/zfs_object_agent/zettacache/Cargo.toml
+++ b/cmd/zfs_object_agent/zettacache/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 anyhow = "1.0"
 async-stream = "0.3.0"
 bincode = "1.3.2"
+bytes = "1.0"
 chrono = "0.4"
 conv = "0.3.3"
 futures = "0.3.13"
