Fix gitrev workflow build failure for zfs_object_agent
With DOSE-734 (commit: e21b8b7d292199454af72f3d088314fe0b493154)
a build failure was introduced in our github workflows due to
build there taking place outside of the github repo.

This patch adds a fallback where we use an environment variable
to populate that field for our zfs_object_agent.

This approach was decided so we can cover all the following
scenarios:
1) Building the zfs_object_agent by manually invoking
   `cargo build` works (the git_version! macro succeeds).
2) Building from within the root of the git repo with make
   works (git_version! macro succeeds).
3) Building from outside the git repo with make works (the
   environment variable is set correctly and passed to the
   cargo build).
4) Building from outside the repo with `cargo build` works
   regardless of whether you provide the environemt variable
   or not.

--- a/cmd/zfs_object_agent/Makefile.am
+++ b/cmd/zfs_object_agent/Makefile.am
@@ -18,6 +18,8 @@ RUSTFLAGS = \
 	-L $(abs_top_builddir)/lib/libzfs/.libs \
 	-L $(abs_top_builddir)/lib/libnvpair/.libs
 
+GITREV = $(shell cat $(abs_top_builddir)/include/zfs_gitrev.h | awk '{print $$3}')
+
 .PHONY: \
 	zcachedb$(EXEEXT) \
 	zfs_object_agent$(EXEEXT) \
@@ -26,23 +28,23 @@ RUSTFLAGS = \
 	libzoa.la
 
 libzoa.la :
-	RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zoa $(RUSTTARGET)
+	CARGO_ZOA_GITREV="$(GITREV)" RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zoa $(RUSTTARGET)
 	cp target/@RUSTDIR@/libzoa.so .
 
 zfs_object_agent$(EXEEXT) :
-	RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zfs_object_agent $(RUSTTARGET)
+	CARGO_ZOA_GITREV="$(GITREV)" RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zfs_object_agent $(RUSTTARGET)
 	cp target/@RUSTDIR@/zfs_object_agent .
 
 zfs_object_perf$(EXEEXT) :
-	RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zfs_object_perf $(RUSTTARGET)
+	CARGO_ZOA_GITREV="$(GITREV)" RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zfs_object_perf $(RUSTTARGET)
 	cp target/@RUSTDIR@/zfs_object_perf .
 
 zoa_test$(EXEEXT) :
-	RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zoa_test $(RUSTTARGET)
+	CARGO_ZOA_GITREV="$(GITREV)" RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zoa_test $(RUSTTARGET)
 	cp target/@RUSTDIR@/zoa_test .
 
 zcachedb$(EXEEXT) :
-	RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zcachedb $(RUSTTARGET)
+	CARGO_ZOA_GITREV="$(GITREV)" RUSTFLAGS="$(RUSTFLAGS)" cargo build --package zcachedb $(RUSTTARGET)
 	cp target/@RUSTDIR@/zcachedb .
 
 all: build
