--- a/cmd/zfs_object_agent/zettaobject/Cargo.toml
+++ b/cmd/zfs_object_agent/zettaobject/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
+arr_macro = "0.1.3"
 async-std = "1.9.0"
 async-stream = "0.3.0"
 bincode = "1.3.2"
