DOSE-723 Checkpoint_zdb should use object store parameters for an exported pool (#504)

--- a/tests/test-runner/bin/zts-report.py.in
+++ b/tests/test-runner/bin/zts-report.py.in
@@ -251,6 +251,8 @@ if os.environ.get('ZTS_OBJECT_STORE') == 'true':
             ['SKIP', object_store_skip],
         'cli_root/zpool_online/zpool_online_002_neg':
             ['SKIP', object_store_skip],
+    	'pool_checkpoint/checkpoint_removal': ['SKIP', object_store_skip],
+    	'pool_checkpoint/checkpoint_vdev_add': ['SKIP', object_store_skip],
     })
 
 #
