DOSE-762 Flush ARC and read through files to properly fill zettacache (#534)

--- a/tests/zfs-tests/tests/perf/fio/Makefile.am
+++ b/tests/zfs-tests/tests/perf/fio/Makefile.am
@@ -7,5 +7,6 @@ dist_pkgdata_DATA = \
 	random_writes.fio \
 	random_writes_fill.fio \
 	sequential_reads.fio \
+	sequential_reads_fill.fio \
 	sequential_writes.fio \
 	sequential_readwrite.fio
